Agrego scripts dev y build para gulp

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Registro",
   "main": "gulpfile.js",
   "scripts": {
-    "dev": "gulp"
+    "dev": "gulp",
+    "build": "gulp css javascript imagenes"
   },
   "author": "Juan",
   "license": "ISC",
